objects/User.object
<CustomObject>
    <fields>
        <fullName>ASV_Contract_Id__c</fullName>
        <label>ASV Contract Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASV_Contract_Number__c</fullName>
        <label>ASV Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASV_Project_Id__c</fullName>
        <label>ASV Project Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASV_Project_Name__c</fullName>
        <label>ASV Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountid__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accountid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_1099_Box__c</fullName>
        <inlineHelpText>Marks default 1099 box for reporting cash disbursements to a 1099 vendor.</inlineHelpText>
        <label>Default 1099 Box</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1. Rents</fullName>
                </value>
                <value>
                    <fullName>2. Royalties</fullName>
                </value>
                <value>
                    <fullName>3. Other Income</fullName>
                </value>
                <value>
                    <fullName>4. Federal Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5. Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6. Medical Payments</fullName>
                </value>
                <value>
                    <fullName>7. Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8. Substitute Payments</fullName>
                </value>
                <value>
                    <fullName>10. Crop Insurance</fullName>
                </value>
                <value>
                    <fullName>13. Golden Parachute</fullName>
                </value>
                <value>
                    <fullName>14. Attorney Proceeds</fullName>
                </value>
                <value>
                    <fullName>15a. Section 409A Deferrals</fullName>
                </value>
                <value>
                    <fullName>15b. Section 409A Income</fullName>
                </value>
                <value>
                    <fullName>16. State Tax Withheld</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Default_Billing_Rate__c</fullName>
        <label>Default Billing Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__X1099_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Marks vendor to report cash disbursements on 1099-Misc form.</inlineHelpText>
        <label>1099 Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <label>Authority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Head of Department</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoExternalEmployeeID__c</fullName>
        <displayFormat>{0}</displayFormat>
        <externalId>true</externalId>
        <label>Auto External Employee ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commission_Percentage__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Set to 1 if Sales Department. If not a Sales user, should be 0.</inlineHelpText>
        <label>Default Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Logo__c</fullName>
        <formula>IMAGE( &quot;/resource/1342124667000/&quot; + Logo_Name__c , &quot;LOGO&quot;, Logo_Height__c , Logo_Width__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_ID__c</fullName>
        <description>contact record ID for this user, used mostly for O&amp;M for logging of visits/tracking of time</description>
        <inlineHelpText>contact record ID for this user</inlineHelpText>
        <label>Contact Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Name__c</fullName>
        <label>Contact Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateContactRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be auto-checked by a User WF and will initiate a Process Builder to create a Contact record.</description>
        <inlineHelpText>Will be auto-checked by a User WF and will initiate a Process Builder to create a Contact record.</inlineHelpText>
        <label>Create Contact Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Electrical Engineer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <formula>IF(CONTAINS(Email, &quot;borregosolar.com&quot;), 
AutoExternalEmployeeID__c, SUBSTITUTE(AutoExternalEmployeeID__c,LEFT(AutoExternalEmployeeID__c,1), &quot;9&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Number_External__c</fullName>
        <description>This field is used to capture the employee number from ultipro for Integration purpose.</description>
        <inlineHelpText>This field is used to capture the employee number from ultipro for Integration purpose.</inlineHelpText>
        <label>Employee Number External</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_Report_Dept__c</fullName>
        <inlineHelpText>Use &quot;Sales and Marketing&quot; if user is Sales/Development, Marketing, or Apps Engineer
Use &quot;Indirects&quot; if user is Construction, O&amp;M, or Engineering
Use &quot;G&amp;A&quot; for all others</inlineHelpText>
        <label>Expense Report Dept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_a_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check off if user is a manager. Used in reporting.</inlineHelpText>
        <label>Is a Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>Picklist used to update Job Level on the Contact Record</description>
        <inlineHelpText>Picklist used to update Job Level on the related Contact Record</inlineHelpText>
        <label>Job Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JL: Alternative Incentive Comp</fullName>
                </value>
                <value>
                    <fullName>JL: APM/Project Manager 1</fullName>
                </value>
                <value>
                    <fullName>JL: Director</fullName>
                </value>
                <value>
                    <fullName>JL: Executive</fullName>
                </value>
                <value>
                    <fullName>JL: Jr. Professional Engineer</fullName>
                </value>
                <value>
                    <fullName>JL: Manager</fullName>
                </value>
                <value>
                    <fullName>JL: O&amp;M Tech 1</fullName>
                </value>
                <value>
                    <fullName>JL: O&amp;M Tech 2</fullName>
                </value>
                <value>
                    <fullName>JL: O&amp;M Tech 3</fullName>
                </value>
                <value>
                    <fullName>JL: Principal Engineer</fullName>
                </value>
                <value>
                    <fullName>JL: Professional Engineer</fullName>
                </value>
                <value>
                    <fullName>JL: Professional Support 1</fullName>
                </value>
                <value>
                    <fullName>JL: Professional Support 2</fullName>
                </value>
                <value>
                    <fullName>JL: Professional Support 3</fullName>
                </value>
                <value>
                    <fullName>JL: Project Manager 2</fullName>
                </value>
                <value>
                    <fullName>JL: PV Engineer 1</fullName>
                </value>
                <value>
                    <fullName>JL: PV Engineer 2</fullName>
                </value>
                <value>
                    <fullName>JL: PV Engineer 3</fullName>
                </value>
                <value>
                    <fullName>JL: Senior PM</fullName>
                </value>
                <value>
                    <fullName>JL: Site Superintendent 1</fullName>
                </value>
                <value>
                    <fullName>JL: Site Superintendent 2</fullName>
                </value>
                <value>
                    <fullName>JL: Site Superintendent 3</fullName>
                </value>
                <value>
                    <fullName>JL: Sr. Professional Engineer</fullName>
                </value>
                <value>
                    <fullName>JL: Support Staff 1</fullName>
                </value>
                <value>
                    <fullName>JL: Support Staff 2</fullName>
                </value>
                <value>
                    <fullName>JL: Support Staff 3</fullName>
                </value>
                <value>
                    <fullName>JL: VP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Project_Rates__c</fullName>
        <description>Links to google sheet with individual project rate numbers organized by role</description>
        <formula>HYPERLINK(&quot;https://docs.google.com/spreadsheets/d/1rsGVyWzjegx9HlQl0oGw__tJKIqTw8HzeqPQQ_0JJpo/edit#gid=0&quot;, &quot;Link&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Links to google sheet with individual project rate numbers organized by role</inlineHelpText>
        <label>Link to Project Rates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Height__c</fullName>
        <label>Logo Height</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Logo_Name__c</fullName>
        <label>Logo Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo_Width__c</fullName>
        <label>Logo Width</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagerSFID__c</fullName>
        <description>displays SF USER ID for related Manager</description>
        <formula>Manager.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>displays SF USER ID for related Manager</inlineHelpText>
        <label>Manager SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Manager.FirstName+&quot; &quot;+Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Manager Name</inlineHelpText>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallEventTimestamp__c</fullName>
        <description>The timestamp of the most recent call event (deliver, transfer...) that this user has handled</description>
        <label>Most Recent Call Event Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCallIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent Call Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__MostRecentCall__c</fullName>
        <label>Most Recent Call</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVM_Agent_Id__c</fullName>
        <description>NVM Agent Id for Contact World for Salesforce</description>
        <externalId>true</externalId>
        <inlineHelpText>NVM Agent Id for Contact World for Salesforce. This should be set to the correct NVM Agent Id to make sure that call tasks are assigned to the correct Salesforce user.</inlineHelpText>
        <label>NVM Agent Id</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NotesCollapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if notes andd additional fields should be collapsed in Log A Call quick action</description>
        <label>Notes Collapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OK_to_Approve_Production_Models__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Remains unchecked unless specific permission is granted from Bradley. Allows user to skip step in the Production Model Approval Process.</inlineHelpText>
        <label>OK to Approve Production Models</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>O_M_Support_Branches__c</fullName>
        <description>List of Branches that the O&amp;M Manager is responsible for supporting.</description>
        <inlineHelpText>If the user is an O&amp;M Manager, select the Branch(es) they are responsible for supporting.</inlineHelpText>
        <label>O&amp;M Support Branches</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Oakland</fullName>
                </value>
                <value>
                    <fullName>San Diego</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpsDivisionID__c</fullName>
        <formula>IF(ISPickval(Ops_Division__c, &quot;San Diego&quot;), &quot;a1O80000008AeJY&quot;, 
IF(ISPickval(Ops_Division__c, &quot;Oakland&quot;), &quot;a1O80000008AeJT&quot;, 
IF(ISPickval(Ops_Division__c, &quot;O&amp;M&quot;), &quot;a1O80000008AeJs&quot;, 
IF(ISPickval(Ops_Division__c, &quot;New York&quot;), &quot;a1O80000008AeJi&quot;, 
IF(ISPickval(Ops_Division__c, &quot;Midwest&quot;), &quot;a1O80000008AeJY&quot;, 
IF(ISPickval(Ops_Division__c, &quot;Massachusetts&quot;), &quot;a1O80000008AeJd&quot;, 
IF(ISPickval(Ops_Division__c, &quot;ESD&quot;), &quot;a1O34000009wg2L&quot;, 
IF(ISPickval(Ops_Division__c, &quot;Corporate/Engineering  &quot;), &quot;a1O80000008AeJx&quot;, null))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ops Division ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Division__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Dev - Emerging</fullName>
                </value>
                <value>
                    <fullName>Dev - New England</fullName>
                </value>
                <value>
                    <fullName>Dev - New York</fullName>
                </value>
                <value>
                    <fullName>Dev - Overhead</fullName>
                </value>
                <value>
                    <fullName>EPC - Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>EPC - Midwest</fullName>
                </value>
                <value>
                    <fullName>EPC - New England</fullName>
                </value>
                <value>
                    <fullName>EPC - Overhead</fullName>
                </value>
                <value>
                    <fullName>EPC - West</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - Mid-Atlantic</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - Midwest</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - New England</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - Overhead</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - Southeast</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - Special Projects</fullName>
                </value>
                <value>
                    <fullName>O&amp;M - West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OvertimeRate__c</fullName>
        <formula>StandardRate__c*1.5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overtime Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pay_Id__c</fullName>
        <label>Pay Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Design_Request_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this box is checked and the user has the Role of Applications Engineer, the user will be copied on all level L1 Pre Sales Design Request emails for their region.</description>
        <inlineHelpText>If the Role field is set to Applications Engineer, check this box to have this user copied on all level L1 Pre Sales Design Request emails for their region.</inlineHelpText>
        <label>Pre Sales Design Request Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_GL_Ultipro__c</fullName>
        <description>this field is used to map the primary GL field from ultipro to salesforce Integration.This field is filled in by boomi integration.</description>
        <inlineHelpText>this field is used to map the primary GL field from ultipro to salesforce Integration.This field is filled in by boomi integration.</inlineHelpText>
        <label>Primary GL Ultipro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Rate__c</fullName>
        <description>Rate assigned by Ryan Burrowbridge - used to calcuate cost per project off time card</description>
        <inlineHelpText>Rate assigned by Ryan Burrowbridge. Use chart for reference</inlineHelpText>
        <label>Project Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate1_Effective_Date__c</fullName>
        <description>Effective date of Rate1.</description>
        <label>Rate1 Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate1__c</fullName>
        <description>2nd most current rate.</description>
        <label>Rate1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate2_Effective_Date__c</fullName>
        <description>Effective date of Rate2.</description>
        <label>Rate2 Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate2__c</fullName>
        <description>3rd most current rate.</description>
        <label>Rate2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate3_Effective_Date__c</fullName>
        <description>Effective date of Rate3.</description>
        <label>Rate3 Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rate3__c</fullName>
        <description>4th most current rate.</description>
        <label>Rate3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reassign_Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if Leads owned by this user should be automatically reassigned by a weekly batch job if they have not been touched in a long time.</inlineHelpText>
        <label>Reassign Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Northern CA</fullName>
                </value>
                <value>
                    <fullName>Southern CA</fullName>
                </value>
                <value>
                    <fullName>New England</fullName>
                </value>
                <value>
                    <fullName>Mid Atlantic</fullName>
                </value>
                <value>
                    <fullName>Southeast</fullName>
                </value>
                <value>
                    <fullName>MidWest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultProductLookupTab__c</fullName>
        <description>Default tab for this user in Product Lookup page.</description>
        <inlineHelpText>Customize default tab in Product Lookup page.</inlineHelpText>
        <label>Default Product Lookup Tab</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guided Selling</fullName>
                    <default>true</default>
                    <label>Guided Selling</label>
                </value>
                <value>
                    <fullName>Search Filters</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiagnosticToolEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to run pricing diagnostics during a Quote Line Editor Calculate.</description>
        <inlineHelpText>Use to enable CPQ Diagnostic Tool, only available if org setting is enabled. Contact support to enable this capability.</inlineHelpText>
        <label>Enable Diagnostic Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__OutputFormatChangeAllowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that indicates whether this user is allowed to change output format of quote documents.</description>
        <inlineHelpText>Check to allow this user to change output format of quote documents.</inlineHelpText>
        <label>Allow Output Format Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductSortPreference__c</fullName>
        <description>Product sort preference for this user. Currently only Chatter Follows are supported.</description>
        <inlineHelpText>Select &quot;Followed&quot; to display products you follow in Chatter before others when adding to quote.</inlineHelpText>
        <label>Product Sort Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Followed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ResetProductLookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether Product Lookup data (guided selling questions, search filters and search results) are cleared after user selects desired products.</description>
        <inlineHelpText>Check to clear search filters and results every time you add products to your quotes. Otherwise, your previous selections are kept.</inlineHelpText>
        <label>Reset Product Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Theme__c</fullName>
        <description>Field that will be set by Select Theme custom link, once one is selected.</description>
        <label>Theme</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesSegmentText__c</fullName>
        <formula>IF(ISPICKVAL(Sales_Segment__c , &quot;CA Net Metering&quot;), &quot;a1O80000008AeIp&quot;, 

IF(ISPICKVAL(Sales_Segment__c , &quot;MA Net Metering&quot;),&quot;a1O80000008AeIu&quot;,

IF(ISPICKVAL(Sales_Segment__c , &quot;NJ Net Metering&quot;), &quot;a1O80000008AeJ9&quot;,

IF(ISPICKVAL(Sales_Segment__c , &quot;NY Net Metering&quot;), &quot;a1O80000008AeIz&quot;,

IF(ISPICKVAL(Sales_Segment__c , &quot;O&amp;M&quot;), &quot;a1O80000008AeJE&quot;,
null)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Segment Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shared Services</fullName>
                </value>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>ESD</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Visit_Report__c</fullName>
        <description>enter report URL for customer to access Service Visit report via portal</description>
        <inlineHelpText>enter report URL for customer to access Service Visit report via portal</inlineHelpText>
        <label>Service Visit Report</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>StandardRate__c</fullName>
        <description>O&amp;M Standard Rate</description>
        <label>Standard Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Expense_Report_PB__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to test Auto create Expense Report.</inlineHelpText>
        <label>Test Expense Report PB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Card_Date__c</fullName>
        <label>Time Card Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountname__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>accountname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Product_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Product Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Scrum_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Scrum Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Team User</fullName>
                </value>
                <value>
                    <fullName>API User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>